Fix: Hid overflow scrollbar on trending component

--- a/app/(protected)/globals.css
+++ b/app/(protected)/globals.css
@@ -186,3 +186,14 @@
   /* width: fit-content !important; */
   pointer-events: none;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
